🐛FIX: remove .button padding on iOS Safari

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -45,6 +45,7 @@ GLOBAL
 
     color: var(--_clr);
     background-color: var(--_clr-highlight);
+    padding: 0;
     border: solid var(--border-width-thick) var(--_clr-border);
     border-radius: var(--borderRadius-round);
 
